added a home page, about page, models page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+  	<%Link_to "home", root_path %>
+	<% Link_to "models" models_path %>
+	<% Link_to "about" about_path %>
+	<% Link_to "Contact us" contact_path %>
     <%= yield %>
   </body>
 </html>
