--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
 <h1>About Me </h1>
-<p>This is my first Ruby on Rails project</p>
+<p>I have been been involved with music most of my life.
+If I'm not playing guitar, or fiddle, you can find me in my shop building or repairing them.
+</p>
+
