--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 
-<% link_to "home", root_path %>
-<% Link_to "models" models_path %>
-<% Link_to "about" about_path %>
-<h1>Welcome to Jimmy's Website </h1>
-<p>Sign up here</p>
+
+<h1>Black Squirrel Guitar Works </h1>
+
+<p>
+	Kent Ohio based luthier who takes pride in his art 
+</p>
+<h2>Join our mail list</h2>
