--- a/app/views/pages/models.html.erb
+++ b/app/views/pages/models.html.erb
@@ -1,10 +1,14 @@
-<h1>Styles I build</h1>
+<h1>Styles We build</h1>
 <br>
 <br>
-<p1>Stratocasters </p1>
+<p1>
+Stratocasters 
+</p1>
 <br>
 <br>
-<p2>Telecaster</p2>
+<p2>
+Telecaster
+</p2>
 <br>
 <br>
 
