added bootstrap jumbotron

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,6 @@
-<h1>About Me </h1>
-<p>I have been been involved with music most of my life.
-If I'm not playing guitar, or fiddle, you can find me in my shop building or repairing them.
-</p>
-
+<div class="jumbotron">
+    <div class="container">
+        <h1>About us</h1>
+        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+    </div>
+</div>
